--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ ga('send', 'pageview');
                     </a></center>
                   </div>
                   <div class="col-xs-6 col-sm-6" style="padding:0.8em 0;">
-                    <center><a href="./magazine.html" style="color:white;">
+                    <center><a href="./privatebeta.activork.com/articles/magazine.html" style="color:white;">
                       <i class="fa fa-book"></i>
                       <br />
                       Magazines
@@ -597,13 +597,13 @@ Well organised, expert curated, high quality content that is locally relevant.
           <ul class="vertical-cat">
             
               <li>
-                <a href="./profile.html">Profile</a> 
+                <a href="./privatebeta.activork.com/articles/profile.html">Profile</a> 
               </li>
               <li>
                 <a href="#!">About "Brand"</a>
               </li>
               <li>
-                <a href="#!" class="dropdown-toggle">Magazines <i class="fa fa-caret-down"></i></a>
+               <a href="#!" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle">Magazines <i class="fa fa-caret-down"></i></a>
                 <ul class="dropdown-menu">
                   <li>Own</li>
                   <li>Followed</li>
@@ -616,7 +616,7 @@ Well organised, expert curated, high quality content that is locally relevant.
                 <a href="#!">Notifications</a>
               </li>
               <li>
-                <a href="./settings.html">Settings</a>
+                <a href="./privatebeta.activork.com/articles/settings.html">Settings</a>
               </li>
               <li>
                 <a href="#!">Custom options</a>
