--- a/index.html
+++ b/index.html
@@ -157,6 +157,17 @@ ga('send', 'pageview');
                     <a href="javascript:void(0);" onclick="showNav()" style="font-size:25px;color:#ffb414;">&#9776;</a>
                 </div>
 
+                <div style="position:absolute;right:0;padding:1em;">
+                    <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="text-primary dropdown-toggle"><i class="fa fa-bell fa-2x"></i></a>
+                    <ul class="dropdown-menu">
+                      <li><p>Notification 1</p></li>
+                      <li><p>Notification 2</p></li>
+                      <li><p>Notification 3</p></li>
+                      <li><p>Notification 4</p></li>
+                      <li><p>Notification 5</p></li>
+                    </ul>                
+                </div>
+
               <!--  <div style="position:absolute;right:0;padding:1em;">
                   <a href="#" id="menu-location-btn"><img src="/static/website/images/location.png" width="20" alt="" /></a>
                 </div>-->
