--- a/index.html
+++ b/index.html
@@ -157,13 +157,15 @@ ga('send', 'pageview');
                     <a href="javascript:void(0);" onclick="showNav()" style="font-size:25px;color:#ffb414;">&#9776;</a>
                 </div>
 
-                <div style="position:absolute;right:0;padding:1em;">
-                    <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="text-primary dropdown-toggle"><i class="fa fa-bell fa-2x"></i></a>
+                <div class="notifications-wrapper">
+                    <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="text-primary dropdown-toggle"><i class="fa fa-bell"></i></a>
                     <ul class="dropdown-menu">
-                      <li><p>Notification 1</p></li>
-                      <li><p>Notification 2</p></li>
-                      <li><p>Notification 3</p></li>
-                      <li><p>Notification 4</p></li>
+                      <li><p>Notification 1</p>
+                        <hr />
+                      </li>
+                      <li><p>Notification 2</p><hr /></li>
+                      <li><p>Notification 3</p><hr /></li>
+                      <li><p>Notification 4</p><hr /></li>
                       <li><p>Notification 5</p></li>
                     </ul>                
                 </div>
@@ -646,14 +648,11 @@ Well organised, expert curated, high quality content that is locally relevant.
               <li>
                 <a href="./privatebeta.activork.com/articles/settings.html"><i class="fa fa-cog fa-2x"></i> Settings</a>
               </li>
-              <li>
-                <a href="#!">Custom options</a>
-              </li>
             
               <li>
                   <form class="search">
                     <div class="form-group">
-                      <div class="input-group">
+                      <div class="input-group" style="width: 94%">
                         <input type="text" class="form-control" id="search" placeholder="Search" style="box-shadow: none;box-shadow:none;border:1px solid grey;border-radius:0;color:white;background:black;">
                         <button type="submit" style="height:34px;display:none;" class="input-group-addon"><span class="glyphicon glyphicon-search"></span></button></div>
                       </div>
