--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@ ga('send', 'pageview');
                 <div class="notifications-wrapper">
                     <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="text-primary dropdown-toggle"><i class="fa fa-bell"></i></a>
                     <ul class="dropdown-menu">
-                      <li><p>Notification 1</p>
+                      <li><p>Lorem ipsum dolor sit amet</p>
                         <hr />
                       </li>
-                      <li><p>Notification 2</p><hr /></li>
-                      <li><p>Notification 3</p><hr /></li>
-                      <li><p>Notification 4</p><hr /></li>
+                      <li><p>You have a new notification</p><hr /></li>
+                      <li><p>Congratulations, you added a new article to your magazine</p><hr /></li>
+                      <li><p>John Doe commented on your article</p><hr /></li>
                       <li><p>Notification 5</p></li>
                     </ul>                
                 </div>
