--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@ ga('send', 'pageview');
                 </div>
 
                 <div class="notifications-wrapper">
-                    <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="text-primary dropdown-toggle"><i class="fa fa-bell"></i></a>
+                    <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="dropdown-toggle"><i class="fa fa-bell"></i></a>
                     <ul class="dropdown-menu">
-                      <li><p>Lorem ipsum dolor sit amet</p>
+                      <li class="active"><p>Lorem ipsum dolor sit amet</p>
                         <hr />
                       </li>
-                      <li><p>You have a new notification</p><hr /></li>
+                      <li class="active"><p>You have a new notification</p><hr /></li>
                       <li><p>Congratulations, you added a new article to your magazine</p><hr /></li>
                       <li><p>John Doe commented on your article</p><hr /></li>
                       <li><p>Notification 5</p></li>
@@ -303,7 +303,7 @@ ga('send', 'pageview');
                     <div class="col-xs-6 col-sm-6" style="padding:0.8em 0;">
                       <center><a href="./privatebeta.activork.com/articles/magazine.html" style="color:white;">
                         <!-- <i class="fa fa-book"></i> -->
-                        <img class="magazine" width="17" />
+                        <img class="magazine" width="15" />
                         <br />
                         Magazines
                       </a></center>
