menu bar issue resolved

--- a/index.html
+++ b/index.html
@@ -640,13 +640,13 @@ Well organised, expert curated, high quality content that is locally relevant.
                 </ul>
               </li>
               <li>
-                <a href="#!"><i class="fa fa-heart-o fa-2x"></i> Articles Liked</a>
+                <a href="#!"><i class="fa fa-heart-o fa-2x"></i> <span>Articles Liked</span></a>
               </li>
               <li>
-                <a href="#!"><i class="fa fa-bell-o fa-2x"></i> Notifications</a>
+                <a href="#!"><i class="fa fa-bell-o fa-2x"></i> <span>Notifications</span></a>
               </li>
               <li>
-                <a href="./privatebeta.activork.com/articles/settings.html"><i class="fa fa-cog fa-2x"></i> Settings</a>
+                <a href="./privatebeta.activork.com/articles/settings.html"><i class="fa fa-cog fa-2x"></i> <span>Settings</span></a>
               </li>
             
               <li>
