--- a/index.html
+++ b/index.html
@@ -329,10 +329,6 @@
 
       <!-- Content -->
       <div class="home-content">
-
-
-
-
         <div id="card1" class="card visible-sm visible-md visible-lg ">
           <div class="row row-eq-height" style="padding: 1em 0.5em;">
             <div class="col-xs-12 col-sm-12 col-md-3">
@@ -341,13 +337,21 @@
             <div class="col-xs-12 col-sm-12 col-md-9">
               <h4 class="card-title">
                 <a href="http://privatebeta.activork.com/article-detail/?id=69"><div class="heading">Harvey Specter Music Collection</div></a>
-                <button type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="btn btn-ellipsis dropdown-toggle"><i class="fa fa-ellipsis-v" style="color:white;"></i></button>
+                <div class="dropdown">
+                  <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  class="text-primary dropdown-toggle"><i class="fa fa-ellipsis-v fa-2x"></i></a>
+                  <ul class="dropdown-menu">
+                    <li class="btn btn-default btn-block"><a href="#"><i class="fa fa-heart-o"></i> Like</a></li>
+                    <li class="btn btn-default btn-block"><a href="#"><i class="fa fa-share-square-o"></i> Share</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li class="btn btn-default btn-block"><a href="#!" type="button" data-toggle="modal" data-target="#add_to_magazine_modal"><i class="fa fa-plus-square-o"></i> Add to Magazine</a></li>
+                  </ul>
+              </div>
               </h4>
               <p class="card-text">
-                <span>youtube</span>
+                <span><i class="fa fa-globe"></i> youtube</span>
               </p>
               <p class="card-text">
-                <span>513 days ago</span>
+                <span><i class="fa fa-clock-o"></i> 513 days ago</span>
               </p>
               <div class="hidden-xs hidden-sm" style="position:absolute;bottom:0;">
                 <!--<a href="#" class="card-link" id="like_5" rel="5"><img src="/static/website/images/icons/like.png" width="20"  />0</a>-->
